[package]
name = "virturo"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
clap_derive = "4.5.32"
ctrlc = "3.4.7"
dotenv = "0.15.0"
env = "1.0.1"
hex = "0.4.3"
pnet = "0.35.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
use = "0.0.1-pre.0"
